feat: gestion de usuarios con equipo profesor, baja logica y comentarios para contratos sin calificacion